2024-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/ql/time/calendars/brazil.{cpp,hpp}: Updated from QuantLib 1.33
	* src/ql/time/calendars/chile.{cpp,hpp}: Idem
	* src/ql/time/calendars/china.cpp: Idem
	* src/ql/time/calendars/southafrica.cpp: Idem
	* src/ql/time/calendars/taiwan.{cpp,hpp}: Idem
	* src/ql/time/calendars/thailand.{cpp,hpp}: Idem
	* src/ql/time/calendars/unitedstates.{cpp,hpp}: Idem
	* src/ql/patterns/observable.{cpp,hpp}: Idem
	* src/ql/time/date.hpp: Idem

2023-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.9

	* src/RcppExports.cpp: Regenerated with updated Rcpp to avoid an
	issue triggered by -Wformat-security warning under R-devel
	* R/RcppExports.R: Idem

2023-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* tools/configure.R: New helper script to set C++ compilation
	standard only when needed for R versions that are older than R 4.2.0
	* configure: Call the new helper script
	* configure.win: Idem
	* src/Makevars.in: Converted for use by helper
	* src/Makevars.win.in: Idem
	* cleanup: Also remove src/Makevars and src/Makevars.win
	* README.md: Update note on compilation standard
	* DESCRIPTION (Depends): Remove 'R (>= 4.2.0)'

2023-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.0.8

2023-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add discussion of implicit C++14 use via R 4.2.0 or
	newer, and detail how to build for older R if needed
	* DESCRIPTION (Depends): Add 'R (>= 4.2.0)'
	* src/Makevars (CXX_STD): Commented-out
	* src/Makevars.win (CXX_STD): Ditto

	* src/calendars.cpp: Sync with QuantLib 1.32
	* src/calendar/southkorea.cpp: Idem
	* src/patterns/observable.{c,h}pp: Idem

2023-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/calendars.cpp: Correct typo in dispatch for 'Australia/ASX'
