@@ -1,6 +1,14 @@
+2024-01-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll micro version and date
+
+	* src/ql/time/calendars/mexico.{cpp,hpp}: Updated from QuantLib 1.33
+
 2024-01-14  Dirk Eddelbuettel  <edd@debian.org>
 
-	* src/ql/time/calendars/brazil.{cpp,hpp}: Updated from QuantLib 1.33
+	* DESCRIPTION (Version, Date): Roll micro version and date
+
+	* src/ql/time/calendars/brazil.{cpp,hpp}: Updated from QuantLib 1.33 (rc)
 	* src/ql/time/calendars/chile.{cpp,hpp}: Idem
 	* src/ql/time/calendars/china.cpp: Idem
 	* src/ql/time/calendars/southafrica.cpp: Idem
